--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Formulário de Inscrição</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
   </header>
 
   <main>
-    <form action="ainda n tem kk" method="post">
+    <form action="" method="post">
       
       <label for="nome">Nome Completo:</label>
       <input type="text" id="nome" name="nome" required><br><br>
