--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 
-  <header>
-    <h1>Formulário de Inscrição</h1>
-  </header>
-
+  <div>
+    <header>
+      <h1>Formulário de Inscrição</h1>
+    </header>
+  </div>
+  
   <main>
     <form action="" method="post">
       
